# Components-SystemProcessing

./: CMakeLists.txt
Legacy/common/: clinfo.cpp  clinfo.hpp  constantmaster.cpp  hwnodeswork.cpp  hwnodeswork.hpp  opencladapter.cpp  sysinfomaster.cpp
Legacy/cpu/: cpu.cpp  cpu.hpp  cpumanager.cpp
Legacy/drive/: drive.cpp  harddrive.cpp  harddrive.hpp
Legacy/gpu/: amdfrequencymanager.cpp  amdsettingsworker.cpp  amdsettingsworker.hpp  freqmanager.cpp  freqmanager.hpp  gpucard.cpp  gpumanager.cpp  gpumanager.hpp  nvidiafrequencymanager.cpp  nvidiafrequencymanager.h  nvidiasettingsworker.cpp  nvidiasettingsworker.hpp
Legacy/motherboard/: motherboard.hpp  pciobjectmanager.cpp  usbobjectmanager.cpp  usbobjectmanager.hpp
Legacy/network/: networkmanager.cpp  networkmanager.hpp
Legacy/os/: osmanager.cpp  osmanager.hpp
Legacy/ram/: ram.cpp  ram.hpp  ramcardmanager.cpp
include/Components/SystemProcessing/: StatusManager.h
src/: statusmanager.cpp  statusmanager.hpp
src/common/: constantmaster.cpp  constantmaster.hpp  modaliasparser.hpp  opencladapter.cpp  opencladapter.hpp  sysinfomaster.cpp  sysinfomaster.hpp  vendormap.hpp
src/cpu/: cpu.cpp  cpumanager.hpp
src/drive/: drive.cpp  drive.hpp  harddrive.cpp
src/gpu/: amdfrequencymanager.cpp  amdfrequencymanager.h  amdsettingsworker.cpp  gpucard.cpp  gpucard.hpp  gpumanager.cpp  nvidiafrequencymanager.cpp  settingsworker.hpp
src/motherboard/: motherboard.cpp  pciobjectmanager.hpp  usbobjectmanager.cpp
src/os/: osmanager.cpp
src/ram/: ram.cpp  ramcardmanager.cpp  ramcardmanager.hpp
